...
            "state": "translated",
            "value": "放弃待处理的提交。你的文件更改会保留为本地更改。"
          }
        }
      }
    },
    "Add": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Hinzufügen"
          }
...
            "state": "translated",
            "value": "将此笔记添加到或移出收藏。"
          }
        }
      }
    },
    "Agenda": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Agenda"
          }
...
            "state": "translated",
            "value": "无法将任务保存到你的收件箱。"
          }
        }
      }
    },
    "Create": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Erstellen"
          }
...
            "state": "translated",
            "value": "Git命令"
          }
        }
      }
    },
    "GitHub": {
      "shouldTranslate": false
    },
    "GitHub HTTPS repository URL.": {
      "localizations": {
        "de": {
          "stringUnit": {
...
            "state": "translated",
            "value": "将你的笔记移动到应用的iCloud云盘文件夹，即可在你的设备间免费同步。"
          }
        }
      }
    },
    "Name": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Name"
          }
...
            "state": "translated",
            "value": "新建文件夹"
          }
        }
      }
    },
    "New Note": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Neue Notiz"
          }
...
            "state": "translated",
            "value": "笔记，%@"
          }
        }
      }
    },
    "Notes": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Notizen"
          }
...
            "state": "translated",
            "value": "设置“即将到来”议程中显示的天数。"
          }
        }
      }
    },
    "Settings": {
      "localizations": {
        "de": {
          "stringUnit": {
            "state": "translated",
            "value": "Einstellungen"
          }
...
